sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for (i<-0 to getNombreValeurs()-1){
    var j = ij)){
      echange(i,j)
      j=j+1
    }
  }
}